<resources>
    <string name="app_name">Phase2</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Edit_Profile_Photo">Edit Profile Photo</string>
    <string name="Done">Done</string>
    <string name="Bio">Bio</string>
    <string name="Full_Name">Full Name</string>
    <string name="EFull_Name">Enter Full Name</string>
    <string name="img"> Profile Image</string>
    <string name="Grid">Grid Photos</string>
    <string name="Posts">Posts</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="User_Name">User Name</string>
    <string name="EUser_Name">Enter User Name</string>
    <string name="Profile">Profile</string>
    <string name="Signup">Sign up</string>
    <string name="Signin">Sign in</string>
    <string name="Instagram">Instagram</string>
    <string name="Email">Email id</string>
    <string name="EEmail">Enter Email id</string>
    <string name="EPassword">Enter Password</string>
    <string name="Password">Password</string>
    <string name="logo">logo</string>
    <string name="CreateAcc">Create Account</string>
    <string name="Logininsta">Login to Instagram</string>
    <string name="Login">Login</string>
    <string name="Resetpass">Reset Password</string>
    <string name="eresetpass">Enter new Password</string>
    <string name="ceresetpass">Confirm new Password</string>
    <string name="Sendemail">Send Email</string>
    <string name="sen">Reset password of the following email id</string>
    <string name="confirm">Confirm user</string>
    <string name="forgot">Forgot Password?</string>
    <string name="changeprofile">Change Profile</string>
</resources>