<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:text="@string/Edit_Profile"
        android:textColor="@color/text_color"

        android:textSize="28sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/Edit_Profile_Photo"
        android:textColor="#03A9F4"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:shapeAppearanceOverlay="@style/circle"
        app:srcCompat="@drawable/cric" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Full_Name"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/fullName"
        app:layout_constraintTop_toBottomOf="@+id/enterUser" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Enter Full Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Bio"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/bioName"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <EditText
        android:id="@+id/bioName"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Enter Bio"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/done"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:onClick="some"
        android:text="@string/Done"
        android:textColor="@color/text_color"
        app:backgroundTint="@color/edittext_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bioName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/User_Name"
        android:textColor="@color/text_color"
        android:textColorHint="#3E3131"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/enterUser"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/enterUser"
        android:layout_width="280sp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Enter User Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>